--- a/wp-content/themes/beetube-child/style.css
+++ b/wp-content/themes/beetube-child/style.css
@@ -14,6 +14,14 @@ Template: beetube
 /*.black {
     background-image:url(images/arrow_scroll_top.png) !important;
 }*/
+.single-post .type-post .entry-title {
+    margin-bottom: 0px !important;
+}
+
+.single-post #content{
+    width:100% !important;
+}
+
 .tooltip > .tooltip-inner {
     background-color: #3C6478;
     width: 800px;
@@ -97,7 +105,7 @@ Template: beetube
     -moz-transition: all 0.7s ease 0s;
     -o-transition: all 0.7s ease 0s;
     transition: all 0.7s ease 0s;
-    height: 25px;
+    height: 35px;
     }
 
 #searchform input[type="text"]:focus {
