--- a/wp-content/themes/beetube-child/style.css
+++ b/wp-content/themes/beetube-child/style.css
@@ -14,6 +14,18 @@ Template: beetube
 /*.black {
     background-image:url(images/arrow_scroll_top.png) !important;
 }*/
+#details .section-content {
+    color: #aacccc !important;
+}
+
+.data-single-full h2 a {
+    color: #aacccc !important;
+}
+
+.item .entry-title a {
+    color: #aacccc !important;
+}
+
 .single-post .type-post .entry-title {
     margin-bottom: 0px !important;
 }
@@ -69,13 +81,13 @@ Template: beetube
 }
 
 #footer {
-    background: url(images/genn_bg_footer.png) !important;
+    background: url(images/genn_background_b36.png) !important;
     background-repeat: repeat !important;
 }
 
 #page {
     overflow:hidden;
-    background: url(images/genn_background.png);
+    background: url(images/genn_background_b50.png);
     background-repeat: repeat;
 }
 
